move horizontal scrollbar for text-files to correct location

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -75,6 +75,5 @@
 }
 
 .preformatted {
-  height: 100%;
   overflow: scroll;
 }
